--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap");
+
 * {
   box-sizing: border-box;
+  border: none;
+  border-radius: 8px;
 }
 
 h1,
@@ -13,6 +18,13 @@ p {
   margin: 0;
 }
 
+body {
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+}
+
 ul,
 p {
   padding-left: 0;
@@ -21,14 +33,15 @@ p {
 
 button {
   height: 45px;
-  padding: 5px;
+  padding: 5px 15px;
   text-align: center;
   font-size: 16px;
   border-radius: 12px;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid rgba(74, 51, 201, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   background-color: transparent;
-  color: #fff;
+  color: #4b34ca;
   transition: background-color 350ms linear, color 250ms linear,
     border 350ms linear;
 }
@@ -36,6 +49,7 @@ button {
 button:hover,
 button:focus {
   background-color: #fff;
-  color: #333;
-  border: none;
+  color: #9583fb;
+  border: 2px solid rgba(74, 51, 201, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
