--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -25,7 +25,7 @@
   color: #4b34ca;
 }
 
-/* @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
     display: flex;
     flex-direction: row;
@@ -34,4 +34,4 @@
   .link {
     font-size: 18px;
   }
-} */
+}
