--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -1,6 +1,7 @@
 .formContainer {
   margin: 50px auto;
-  width: 370px;
+  width: 100%;
+  max-width: 370px;
   height: 280px;
   padding: 15px;
 
@@ -25,6 +26,7 @@
 }
 
 .formInput {
+  width: 100%;
   height: 28px;
   border: 2px solid #a99aff;
   transition: border-color 250ms linear;
