--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding: 12px;
+  padding: 10px;
   gap: 10px;
 }
 
 .username {
   font-weight: 500;
-
+  text-align: end;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -21,10 +21,10 @@
   }
 
   .username {
-    font-size: 18px;
+    font-size: 16px;
   }
 
   .btn {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
