--- a/src/pages/ContactsPage/ContactsPage.module.css
+++ b/src/pages/ContactsPage/ContactsPage.module.css
@@ -1,6 +1,7 @@
 .container {
-  width: 1200px;
-  height: 165px;
+  width: 100%;
+  max-width: 1200px;
+  height: auto;
   text-align: center;
 
   border: 2px solid rgba(74, 51, 201, 0.4);
@@ -23,20 +24,22 @@
   font-size: 25px;
 }
 
-/* @media screen and (min-width: 375px) {
-  .wrap {
-    grid-template-columns: 1fr;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+@media (min-width: 375px) {
+  .container {
+    width: 95%;
   }
 
   .title {
-    font-size: 2em;
+    font-size: 22px;
   }
-} */
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 90%;
+  }
+
+  .title {
+    font-size: 24px;
+  }
+}
