--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,20 +3,44 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50vh;
+  height: 28vh;
 }
 
 .title {
   font-family: "Caveat", cursive;
   font-weight: 400;
-  font-size: 54px;
+  font-size: 32px;
   text-align: center;
 }
 
 .title > span {
   font-family: "Caveat", cursive;
   text-transform: uppercase;
-  font-size: 84px;
+  font-size: 48px;
   display: block;
   margin-bottom: 10px;
+}
+
+@media (min-width: 768px) {
+  .title {
+    font-size: 32px;
+  }
+
+  .title > span {
+    font-size: 54px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    height: 50vh;
+  }
+
+  .title {
+    font-size: 54px;
+  }
+
+  .title > span {
+    font-size: 84px;
+  }
 }
